<resources>
    <string name="app_name">Download FIle App</string>
    <string name="download_main_tar_gz">Download Main.tar.gz</string>
    <string name="download_termux">Download Termux</string>
    <string name="download_note">Download note</string>
    <string name="install_termux">Install Termux</string>
    <string name="install_total_commander">Install Total Commander</string>
    <string name="installnekobox">Install NekoBox</string>
    <string name="install_chrome">Install Chrome</string>
    <string name="install_firefox">Install Firefox</string>
    <string name="install_gnucash">Install Gnucash</string>
    <string name="install_mpv">Install MPV</string>
    <string name="install_aimp">Install aimp</string>
    <string name="install_pluma">Install Pluma</string>
    <string name="install_byedpi">Install ByeDPI</string>
    <string name="install_libretorrent">Install LibreTorrent</string>
    <string name="install_gesture">Install Gesture</string>
    <string name="install_hibernator">Install Hibernator</string>
    <string name="install_v2rayng">Install V2rayNG</string>
    <string name="install_terminal">Install Terminal</string>
    <string name="install_telegram">Install Telegram</string>
    <string name="install_mt_manager">Install MT Manager</string>
    <string name="install_curl_and_openssl">Install curl and openssl</string>
    <string name="install_wifi_adb">Install WIFI ADB</string>
    <string name="install_webview">Install Webview</string>
</resources>